# prosper-analyze

./: .gitignore  pyproject.toml
AutogluonModels/ag-20250318_232623/: learner.pkl  metadata.json  predictor.pkl
AutogluonModels/ag-20250318_232623/models/: trainer.pkl
AutogluonModels/ag-20250318_232623/models/ExtraTreesMSE/: model.pkl
AutogluonModels/ag-20250318_232623/models/RandomForestMSE/: model.pkl
AutogluonModels/ag-20250318_232623/models/WeightedEnsemble_L2/: model.pkl
AutogluonModels/ag-20250318_232623/models/WeightedEnsemble_L2/utils/: model_template.pkl  oof.pkl
AutogluonModels/ag-20250318_232623/utils/attr/ExtraTreesMSE/: y_pred_proba_val.pkl
AutogluonModels/ag-20250318_232623/utils/attr/RandomForestMSE/: y_pred_proba_val.pkl
prosper-analyse/: analyze.py  build_dataset.py  build_model.py
